<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/lan_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat_lon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/lat_lon_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lan_lon"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="some latitude"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/name_of_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lat_lon_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/name_of_shop"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/name_of_shop_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_shop_hint"
        android:layout_marginRight="32dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/name_of_shop"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/name_of_shop_edittext"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/shop_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:hint="@string/description_hint"/>

    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/shop_description_edittext"
        android:text="@string/radius"/>

    <EditText
        android:id="@+id/radius_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/radius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/m"
        android:hint="@string/radius_hint"
        />
    <TextView
        android:id="@+id/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="m"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>